--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
+    <link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet" />
     <title>Landing Page GTA</title>
 </head>
 <body>
@@ -32,6 +34,8 @@
 
         <div class="informacoes">
             <div class="lista-de-jogos">
+                <img src="./imagens/logo-gta-v.svg" alt="Logo GTA V">
+                <img src="./imagens/logo-gta-online.svg" alt="Logo GTA online">
             </div>
             <h1 class="titulo">Ja disonivieis para playstation 5 e Xbox Sereies x</h1>
             <p class="texto">
@@ -68,7 +72,28 @@
                     </li>
                 </ul>
             </div>
+            <button class="btn-plataforma">
+                Selecione a plataformas
+
+                <ul class="plataformas">
+                    <li>
+                        <img src="./imagens/logo-ps5.svg" alt="logo playstation 5">
+                    </li>
+                    <li>
+                        <img src="./imagens/logo-xbox-series-s.svg" alt="logo xbox Sereies X|S">
+                    </li>
+                    <li>
+                        <img src="./imagens/logo-ps4.svg" alt="logo playstation 4">
+                    </li>
+                    <li>
+                        <img src="./imagens/logo-xbox-one.svg" alt="logo xbox one">
+                    </li>
+                    <li>
+                        <img src="./imagens/logo-pc.svg" alt="logo pc ">
+                    </li>
+                </ul>
+            </button>
         </div>
-        </section>
+    </section>
 </body>
 </html>
