--- a/index.html
+++ b/index.html
@@ -1,99 +1,104 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./imagens/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/style.css">
-    <link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet" />
-    <title>Landing Page GTA</title>
-</head>
-<body>
-    <header class="cabecalho">
-        <div class="logo">
-            <img src="./imagens/logo-rockstar.svg" alt="logo Rockstar Games">
-            <img src="./imagens/logo-gta-v.svg" alt="Logo GTA V">
-        </div>
-        <nav>
-            <ul class="menu">
-                <li>
-                    <a href="#home">Home</a>
-                </li>
-                <li>
-                    <a href="#comprar">Comprar</a>
-                </li>
-                <li>
-                    <a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Semana do Zero ao Programador Contratado - Landing Page GTA</title>
+		<link rel="shortcut icon" href="src/imagens/favicon.png" type="image/x-icon" />
+		<link href="https://fonts.cdnfonts.com/css/chalet" rel="stylesheet" />
 
-    <main class="home" id="home">
-        <img class="imgem-fundo" src="./imagens/bg-main.png" alt="Logo GTA">
+        <link rel="stylesheet" href="./estilos/reset.css" />
+		<link rel="stylesheet" href="./estilos/style.css" />
+		<link rel="stylesheet" href="./estilos/fontes.css" />
+        <link rel="stylesheet" href="estilos/responsivo.css">
+		
+	</head>
+	<body>
+		<header class="cabecalho">
+			<div class="logo">
+				<img src="./imagens/logo-rockstar.svg" alt="Logo Rockstar Games" />
+				<hr />
+				<img src="./imagens/logo-gta.svg" alt="Logo GTA V" />
+			</div>
+			<nav>
+				<ul class="menu">
+					<li>
+						<a href="#home">Home</a>
+					</li>
+					<li>
+						<a href="#comprar">Comprar</a>
+					</li>
+					<li>
+						<a href="https://support.rockstargames.com/categories/200013306" target="_blank">Suporte <img src="./imagens/icone-link.svg" alt="Icone de link de suporte" /></a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<main class="home" id="home">
+			<img class="imagem-fundo" src="./imagens/bg-main.png" alt="Rapaz de moletom laranja ao lado de um carro esportivo amarelo" />
 
-        <div class="informacoes">
-            <div class="lista-de-jogos">
-                <img src="./imagens/logo-gta-v.svg" alt="Logo GTA V">
-                <img src="./imagens/logo-gta-online.svg" alt="Logo GTA online">
-            </div>
-            <h1 class="titulo">Ja disonivieis para playstation 5 e Xbox Sereies x</h1>
-            <p class="texto">
-                Experimente os fenomenos de entreterimento Grand Theft Autou V e GTA online
-            </p>
-            <a class="btn-comprar" href="#comprar">Compre-já</a>
-        </div>
-    </main>
+			<div class="informacoes">
+				<div class="lista-de-jogos">
+					<img src="./imagens/logo-gta-v.svg" alt="Logo GTA V" />
+					<img src="./imagens/logo-gta-online.svg" alt="Logo GTA Online" />
+				</div>
+				<h1 class="titulo">Já disponíveis para Playstation 5 e Xbox Series X|S</h1>
+				<p class="texto">Experimente os fênomenos de entretenimento Grand Theft Auto V e GTA Online</p>
 
-    <section class="compre" id="comprar">
-        <h2 class="titulo">Compre-já</h2>
-        <div class="cartao">
-            <img class="capa-do-jogo" src="./imagens/gta5.jpg" alt="Capa do jogo GTA V">
-            <div class="informacoes">
-                <h3>Grand Theft Auto V</h3>
-                <p>
-                    Inclui <strong>modo historia do GTA V</strong> e <strong>GTA online</strong>
-                </p>
-                <ul class="plataformas">
-                    <li>
-                        <img src="./imagens/logo-ps5.svg" alt="logo playstation 5">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-xbox-series-s.svg" alt="logo xbox Sereies X|S">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-ps4.svg" alt="logo playstation 4">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-xbox-one.svg" alt="logo xbox one">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-pc.svg" alt="logo pc ">
-                    </li>
-                </ul>
-            </div>
-            <button class="btn-plataforma">
-                Selecione a plataformas
+				<a class="btn-comprar" href="#comprar">Compre já</a>
+			</div>
+		</main>
+		<section class="compre-ja" id="comprar">
+			<h2 class="titulo">Compre já</h2>
+			<div class="cartao">
+				<img class="capa-do-jogo" src="./imagens/gta5.jpg" alt="Capa do jogo GTA V" />
 
-                <ul class="plataformas">
-                    <li>
-                        <img src="./imagens/logo-ps5.svg" alt="logo playstation 5">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-xbox-series-s.svg" alt="logo xbox Sereies X|S">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-ps4.svg" alt="logo playstation 4">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-xbox-one.svg" alt="logo xbox one">
-                    </li>
-                    <li>
-                        <img src="./imagens/logo-pc.svg" alt="logo pc ">
-                    </li>
-                </ul>
-            </button>
-        </div>
-    </section>
-</body>
+				<div class="informacoes">
+					<h3>Grand Theft Auto V</h3>
+					<p>
+						Inclui <strong>modo história do GTA V</strong> e
+						<strong>GTA Online</strong>
+					</p>
+					<ul class="plataformas">
+						<li>
+							<img src="./imagens/logo-ps5.svg" alt="Logo Playstation 5" />
+						</li>
+						<li>
+							<img src="./imagens/logo-xbox-series-s.svg" alt="Logo Xbox series X|S" />
+						</li>
+						<li>
+							<img src="./imagens/logo-ps4.svg" alt="Logo Playstation 4" />
+						</li>
+						<li>
+							<img src="./imagens/logo-xbox-one.svg" alt="Logo Xbox One" />
+						</li>
+						<li>
+							<img src="./imagens/logo-pc.svg" alt="Logo PC" />
+						</li>
+					</ul>
+				</div>
+				<button class="btn-plataforma">
+					Selecione a plataforma
+
+					<ul class="plataformas">
+						<li>
+							<img src="./imagens/logo-ps5.svg" alt="Logo Playstation 5" />
+						</li>
+						<li>
+							<img src="./imagens/logo-xbox-series-s.svg" alt="Logo Xbox series X|S" />
+						</li>
+						<li>
+							<img src="./imagens/logo-ps4.svg" alt="Logo Playstation 4" />
+						</li>
+						<li>
+							<img src="./imagens/logo-xbox-one.svg" alt="Logo Xbox One" />
+						</li>
+						<li>
+							<img src="./imagens/logo-pc.svg" alt="Logo PC" />
+						</li>
+					</ul>
+				</button>
+			</div>
+		</section>
+	</body>
 </html>
